--- a/.github/workflows/discord-webhook.yml
+++ b/.github/workflows/discord-webhook.yml
@@ -41,7 +41,7 @@ jobs:
                     echo "DEBUG: COMMITS_JSON = $COMMITS_JSON"
                     echo "$COMMITS_JSON" | jq .
 
-                    for commit in $(echo "$COMMITS_JSON" | jq -c '.[]'); do
+                    echo "$COMMITS_JSON" | jq -c '.[]' | while IFS= read -r commit; do
                       COMMIT_MESSAGE=$(echo "$commit" | jq -r '.message')
                       COMMIT_URL=$(echo "$commit" | jq -r '.url')
                       COMMIT_AUTHOR=$(echo "$commit" | jq -r '.author.name')
