discord-webhook.yml update

--- a/.github/workflows/discord-webhook.yml
+++ b/.github/workflows/discord-webhook.yml
@@ -41,19 +41,15 @@ jobs:
                     echo "DEBUG: COMMITS_JSON = $COMMITS_JSON"
                     echo "$COMMITS_JSON" | jq .
 
-                    echo "$COMMITS_JSON" | jq -c '.[]' | while IFS= read -r commit; do
+                    while IFS= read -r commit; do
                       COMMIT_MESSAGE=$(echo "$commit" | jq -r '.message')
                       COMMIT_URL=$(echo "$commit" | jq -r '.url')
                       COMMIT_AUTHOR=$(echo "$commit" | jq -r '.author.name')
 
-                      echo "DEBUG: COMMIT_MESSAGE = $COMMIT_MESSAGE"
-                      echo "DEBUG: COMMIT_URL = $COMMIT_URL"
-                      echo "DEBUG: COMMIT_AUTHOR = $COMMIT_AUTHOR"
-                      echo "DEBUG: COMMIT_LIST = $COMMIT_LIST"
-
                       COMMIT_LIST="${COMMIT_LIST}\n📝 $COMMIT_MESSAGE - 👤 $COMMIT_AUTHOR\n🔗 [커밋 보기]($COMMIT_URL)"
-                    done
+                    done < <(echo "$COMMITS_JSON" | jq -c '.[]')
 
+                    echo "DEBUG: COMMIT_LIST = $COMMIT_LIST"
 
                     if [[ -n "$COMMIT_LIST" ]]; then
                       MESSAGE="$MESSAGE\n\n🔄 **푸시된 커밋 목록:**$COMMIT_LIST"
