--- a/ilm/package.json
+++ b/ilm/package.json
@@ -11,7 +11,11 @@
   },
   "dependencies": {
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-router-dom": "^6.26.0",
+    "bootstrap": "^5.3.3",
+    "react-bootstrap": "^2.10.4",
+    "axios": "^1.7.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
