--- a/ilm/package.json
+++ b/ilm/package.json
@@ -10,12 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.7",
+    "bootstrap": "^5.3.3",
     "react": "^19.0.0",
+    "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
     "react-router-dom": "^6.26.0",
-    "bootstrap": "^5.3.3",
-    "react-bootstrap": "^2.10.4",
-    "axios": "^1.7.7"
+    "xml-js": "^1.6.11"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
