--- a/ilm/package.json
+++ b/ilm/package.json
@@ -15,7 +15,9 @@
     "react-router-dom": "^6.26.0",
     "bootstrap": "^5.3.3",
     "react-bootstrap": "^2.10.4",
-    "axios": "^1.7.7"
+    "axios": "^1.7.7",
+    "styled-components": "6.1.12",
+    "fast-xml-parser": "^5.0.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
