--- a/ilm/package.json
+++ b/ilm/package.json
@@ -3,21 +3,19 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-
   "scripts": {
     "dev": "vite",
-    "build": "vite build", 
+    "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-router-dom": "^6.26.0",
+    "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
+    "react": "^19.0.0",
     "react-bootstrap": "^2.10.4",
-    "axios": "^1.7.7"
-   
+    "react-dom": "^19.0.0",
+    "react-router-dom": "^6.26.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
