--- a/ilm/package.json
+++ b/ilm/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
+    "dayjs": "^1.11.13",
     "fast-xml-parser": "^5.0.9",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.4",
