--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "proxy": "https://apis.data.go.kr/"
+    "preview": "vite preview"
   }
 }
