--- a/ilm/package.json
+++ b/ilm/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "proxy": "https://www.culture.go.kr",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -29,4 +30,5 @@
     "globals": "^15.15.0",
     "vite": "^6.2.2"
   }
+  
 }
