--- a/ilm/package.json
+++ b/ilm/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "proxy": "https://www.culture.go.kr",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -28,6 +29,6 @@
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
-    "vite": "^6.2.0"
+    "vite": "^6.2.2"
   }
 }
